--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,5 +1,5 @@
 # SPDX-License-Identifier: Apache-2.0
-# Copyright 2024 Canonical Ltd.
+# Copyright 2023 Canonical Ltd.
 
 name: Master workflow
 
@@ -10,20 +10,10 @@ on:
   push:
     branches:
       - master
+  repository_dispatch:
+    types: [trigger-workflow]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-go@v5
-        with:
-          go-version-file: 'go.mod'
-
-      - name: Build
-        run: go build
-
   lint:
     name: lint
     runs-on: ubuntu-latest
@@ -35,21 +25,23 @@ jobs:
           go-version-file: 'go.mod'
 
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v6.0.1
+        uses: golangci/golangci-lint-action@v4.0.0
         with:
           version: latest
           args: -v --config ./.golangci.yml
 
   license-check:
     runs-on: ubuntu-latest
+    needs: lint
     steps:
       - uses: actions/checkout@v4
 
       - name: reuse lint
-        uses: fsfe/reuse-action@v3
+        uses: fsfe/reuse-action@v2
 
   fossa-check:
     runs-on: ubuntu-latest
+    needs: license-check
     steps:
       - uses: actions/checkout@v4
 
@@ -57,9 +49,23 @@ jobs:
         uses: fossa-contrib/fossa-action@v3
         with:
           fossa-api-key: 0c3bbcdf20e157bbd487dae173751b28
+          
+  build:
+    runs-on: ubuntu-latest
+    needs: fossa-check
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-go@v5
+        with:
+          go-version-file: 'go.mod'
+
+      - name: Build
+        run: go build
 
   unit-tests:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - uses: actions/checkout@v4
 
@@ -69,3 +75,26 @@ jobs:
 
       - name: Unit tests
         run: go test ./...
+        
+  docker-build:
+    runs-on: ubuntu-latest
+    needs: unit-tests
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-go@v5
+        with:
+          go-version-file: 'go.mod'
+          
+      - uses: docker/setup-buildx-action@v3.0.0
+      
+      - name: Build Docker image
+        run: make docker-build
+
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.PASSWORD }}" | docker login -u "${{ secrets.USERNAME }}" --password-stdin
+      - name: Tag Docker image
+        run: docker tag 5gc-smf:0.0.1-dev ios5g/nas
+
+      - name: Push Docker image to Docker Hub
+        run: docker push ios5g/nas
