--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -94,7 +94,7 @@ jobs:
       - name: Log in to Docker Hub
         run: echo "${{ secrets.PASSWORD }}" | docker login -u "${{ secrets.USERNAME }}" --password-stdin
       - name: Tag Docker image
-        run: docker tag 5gc-smf:0.0.1-dev ios5g/nas
+        run: docker tag 5gc-nas:0.0.1-dev ios5g/nas
 
       - name: Push Docker image to Docker Hub
         run: docker push ios5g/nas
