--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -89,7 +89,8 @@ jobs:
       - uses: docker/setup-buildx-action@v3.0.0
       
       - name: Build Docker image
-        run: make docker-build
+        run: docker build -t 5gc-nas:0.0.1-dev ios5g/nas
+        #run: make docker-build
 
       - name: Log in to Docker Hub
         run: echo "${{ secrets.PASSWORD }}" | docker login -u "${{ secrets.USERNAME }}" --password-stdin
