--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -80,24 +80,23 @@ jobs:
     runs-on: ubuntu-latest
     needs: unit-tests
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Go
-        uses: actions/setup-go@v5
+      - uses: actions/setup-go@v5
         with:
-          #go-version: '1.17'  # Replace with your Go version if necessary
           go-version-file: 'go.mod'
           
+      - uses: docker/setup-buildx-action@v3.0.0
+      
       - name: Build Docker image
-        run: docker build -t ios5g/nas:latest .
+        run: make docker-build
 
       - name: Log in to Docker Hub
         run: echo "${{ secrets.PASSWORD }}" | docker login -u "${{ secrets.USERNAME }}" --password-stdin
-
       - name: Tag Docker image
-        run: docker tag nas:latest ios5g/nas
+        run: docker tag 5gc-nas:0.0.1-dev ios5g/nas
 
       - name: Push Docker image to Docker Hub
-        run: docker push ios5g/nas
+        run: docker push ios5g/nas 
+        
 
