--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -91,12 +91,17 @@ jobs:
       - name: Build Docker image
         run: make docker-build
 
-      - name: Log in to Docker Hub
-        run: echo "${{ secrets.PASSWORD }}" | docker login -u "${{ secrets.USERNAME }}" --password-stdin
+      - uses: docker/login-action@v3.1.0
+        with:
+          registry: docker.io
+          username: ${{ secrets.ACR_TOKEN_NAME }}
+          password: ${{ secrets.ACR_TOKEN }}
+
       - name: Tag Docker image
         run: docker tag 5gc-nas:0.0.1-dev ios5g/nas
 
       - name: Push Docker image to Docker Hub
-        run: docker push ios5g/nas 
-        
+        run: docker push ios5g/nas
 
+      - name: Cleanup Docker images
+        run: docker image prune -af
