--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -94,8 +94,8 @@ jobs:
       - uses: docker/login-action@v3.1.0
         with:
           registry: docker.io
-          username: ${{ secrets.ACR_TOKEN_NAME }}
-          password: ${{ secrets.ACR_TOKEN }}
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
 
       - name: Tag Docker image
         run: docker tag 5gc-nas:0.0.1-dev ios5g/nas
