--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -98,10 +98,10 @@ jobs:
           password: ${{ secrets.PASSWORD }}
 
       - name: Tag Docker image
-        run: docker tag 5gc-nas:0.0.1-dev ios5g/nas
+        run: docker tag 5gc-nas:0.0.1-dev ios5g/simapp
 
       - name: Push Docker image to Docker Hub
-        run: docker push ios5g/nas
+        run: docker push ios5g/simapp
 
       - name: Cleanup Docker images
         run: docker image prune -af
